--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,15 @@
         <activity
             android:name=".view.navigation.ViewPagerActivity"
             android:exported="true">
+
+
+
+        </activity>
+
+        <activity
+            android:name=".view.navigation.BottomBarActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Nasa_api">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
