--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,6 @@
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Nasa_api">
-
-
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -30,22 +28,22 @@
         <activity
             android:name=".view.navigation.ViewPagerActivity"
             android:exported="true">
-
-
-
         </activity>
 
         <activity
             android:name=".view.navigation.BottomBarActivity"
             android:exported="true"
             android:theme="@style/Theme.Nasa_api">
+        </activity>
+
+        <activity
+            android:name=".view.animation.AnimationActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-
         </activity>
 
         <meta-data
